Revert "skills: redesign and simplfy"
This reverts commit 88f2343279c656a3a07535800d9945edf629beda.

--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -5,7 +5,7 @@
 }
 
 .single-chart {
-  max-width: 20%;
+  max-width: 25%;
   justify-content: center;
 }
 
@@ -39,9 +39,19 @@
     stroke-dasharray: 0 100;
   }
 }
-.circle {
-  stroke: #fff;
+
+.circular-chart.orange .circle {
+  stroke: #ff9f00;
 }
+
+.circular-chart.green .circle {
+  stroke: #4cc790;
+}
+
+.circular-chart.blue .circle {
+  stroke: #3c9ee5;
+}
+
 .percentage {
   text-transform: uppercase;
   fill: #ffffffb2;
@@ -61,7 +71,11 @@
 .read-time {
   float: right;
 }
-
+@media only screen and (max-width: 850px) {
+  .single-chart {
+    max-width: 20%;
+  }
+}
 @media only screen and (max-width: 480px) {
   .read-time {
     text-align: left;
@@ -80,6 +94,6 @@
     margin-top: 20px;
   }
   .single-chart {
-    max-width: 30%;
+    max-width: 20%;
   }
 }
