--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     </title>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport"/>
-    <link href="https://avatars2.githubusercontent.com/u/44697929?s=400&u=963577e39247d3fc461e7d0f1eba2cbda75936b2&v=4" rel="icon" type="image/x-icon">
+    <link href="https://avatars1.githubusercontent.com/u/57469823?s=460&v=4" rel="icon" type="image/x-icon">
     <link href="/assets/css/main.css" rel="stylesheet"/>
     <link href="/assets/css/extra.css" rel="stylesheet">
     <link href="/assets/css/back.to.top.css" rel="stylesheet">
