--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,22 +45,12 @@
             {% include skills.html %}
             <div class="inner">
                 <header class="major">
-                    <h2>Recent Projects</h2>
-                </header>
-            </div>
-            {% include projects-tiles.html %}
-            <div class="extra">
-                <a href="{{ site.url }}/projects" class="button">View All Projects</a>
-            </div>
-
-            <div class="inner">
-                <header class="major">
-                    <h2>Recent Posts</h2>
+                    <h2>xyzuan`ROM</h2>
                 </header>
             </div>
             {% include posts-tiles.html %}
             <div class="extra">
-                <a href="{{ site.url }}/blog" class="button">View All posts</a>
+                <a href="{{ site.url }}/blog" class="button">View All Build</a>
             </div>
         </div>
 
