--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -3,7 +3,6 @@
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
-///
 
 /* Banner */
 
@@ -15,7 +14,8 @@
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;/  border-bottom: 0 !important;
+  background-size: cover;
+  border-bottom: 0 !important;
   cursor: default;
   height: 60vh;
   margin-bottom: -3.25em;
@@ -24,6 +24,20 @@
   position: relative;
   top: -3.25em;
 
+  &:after {
+    @include vendor("transition", "opacity #{_duration(banner)} ease");
+    @include vendor("transition-delay", "0.75s");
+    @include vendor("pointer-events", "none");
+    background-color: _palette(bg);
+    content: "";
+    display: block;
+    height: 100%;
+    left: 0;
+    opacity: 0.85;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1;
   }
 
   h1 {
